--- a/package.json
+++ b/package.json
@@ -1,39 +1,13 @@
 {
-  "name": "bitespeed-identity-service",
-  "version": "1.0.0",
-  "description": "Customer identity tracking service for Bitespeed",
-  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "dev:commonjs": "node --loader ts-node/esm src/index.ts",
+    "render-build": "npm install && npx prisma generate && npm run build",
+    "render-start": "npx prisma migrate deploy && npm start",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
-  },
-  "keywords": [
-    "bitespeed",
-    "customer",
-    "identity",
-    "tracking"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "@prisma/client": "^5.7.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
-    "prisma": "^5.7.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.3.3"
   }
 }
