--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,16 @@
 {
     "compilerOptions": {
       "target": "ES2020",
-      "module": "commonjs",
-      "lib": ["ES2020"],
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
+      "module": "ESNext",
+      "moduleResolution": "node",
       "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "resolveJsonModule": true,
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true,
-      "moduleResolution": "node"
+      "strict": true,
+      "skipLibCheck": true,
+      "outDir": "./dist",
+      "lib": ["es2020", "dom"],
+      "types": ["node"]
     },
-    "include": [
-      "src/**/*"
-    ],
-    "exclude": [
-      "node_modules",
-      "dist"
-    ],
-    "ts-node": {
-      "esm": false,
-      "compilerOptions": {
-        "module": "commonjs"
-      }
-    }
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
   }
