--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
-    "@types/node": "20.12.12",
+    "@types/node": "^20.19.9",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
