--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "dev:commonjs": "node --loader ts-node/esm src/index.ts",
-    "render-build": "npm cache clean --force && npm install --no-optional && npx prisma generate && npm run build",
+    "render-build": "npm install && npx prisma generate && npm run build",
     "render-start": "npx prisma migrate deploy && npm start",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -35,9 +35,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/node": "^20.19.9",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
