--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "dev:commonjs": "node --loader ts-node/esm src/index.ts",
-    "render-build": "npm install && npx prisma generate && npm run build",
+    "render-build": "npm install --include=dev && npx prisma generate && npm run build",
     "render-start": "npx prisma migrate deploy && npm start",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -30,17 +30,17 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@types/node": "^20.10.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.3.3"
+    "tsx": "^4.20.3"
   }
 }
