--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
     "compilerOptions": {
       "target": "ES2020",
-      "module": "ESNext",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "strict": true,
-      "skipLibCheck": true,
+      "lib": ["ES2020"],
+      "module": "commonjs",
+      "rootDir": "./src",
       "outDir": "./dist",
-      "lib": ["es2020", "dom"],
-      "types": ["node"]
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
+      "resolveJsonModule": true,
+      "moduleResolution": "node",
+      "declaration": false,
+      "removeComments": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist", "**/*.test.ts"]
   }
